widgets over Person, visual representation, partial loading